<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:enabled="false"
        android:id="@+id/dashboardNavigationButton"
        android:icon="@drawable/ic_bottom_navigation_bar_dashboard"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/medsRegisterItem"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_navigation_bar_meds_register"
        android:title="@string/meds_register"/>
    <item
        android:enabled="false"
        android:icon="@drawable/ic_bottom_navigation_bar_assistant"
        android:title="@string/assistant"/>
    <item
        android:enabled="false"
        android:icon="@drawable/ic_bottom_navigation_bar_calculator"
        android:title="@string/calculator"/>
    <item
        android:enabled="false"
        android:icon="@drawable/ic_bottom_navigation_bar_profile"
        android:title="@string/profile"/>

</menu>