<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pharmacy.ui.fragments.MedsRegisterDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/meds_registar_details_fragment_title"/>

        <ImageView
            android:id="@+id/medsRegisterDetailsFragmentMedImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentTitle" />


        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedImage"
            app:layout_constraintTop_toTopOf="@+id/medsRegisterDetailsFragmentMedImage"
            style="@style/medNameLabel"/>

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedATC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedImage"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedName"
            style="@style/medInfoLabel"/>

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedATC"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedName"
            style="@style/medInfoLabel"
            android:text="-" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="30dp"
            app:layout_constraintStart_toEndOf="@+id/dash"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedName"
            style="@style/medInfoLabel" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedShortDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="37dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedImage"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:singleLine="false"
            android:visibility="gone" />

        <View
            android:id="@+id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedShortDescr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp"
            style="@style/divider"/>

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedActiveSubstance"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantity"
            style="@style/substanceInfoLabel"
            android:text="@string/meds_registar_details_fragment_active_substance" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantity"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedActiveSubstance"
            app:layout_constraintEnd_toStartOf="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDose"
            style="@style/substanceInfoLabel"
            android:text="@string/meds_registar_details_fragment_active_substance_selected_quantity" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDose"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/substanceInfoLabel"
            android:text="@string/meds_registar_details_fragment_recommended_daily_dose" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedActiveSubstanceValue"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedActiveSubstance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantityValue"
            style="@style/substanceValueLabel"
            android:backgroundTint="@color/purple"
            android:textColor="@color/dark_purple" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantityValue"
            android:layout_marginHorizontal="7dp"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantity"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceValue"
            app:layout_constraintEnd_toStartOf="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDoseValue"
            style="@style/substanceValueLabel"
            android:textColor="@color/dark_teal"
            android:backgroundTint="@color/teal" />

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDoseValue"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDose"
            app:layout_constraintStart_toEndOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceSelectedQuantityValue"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/substanceValueLabel"
            android:textColor="@color/dark_peach"
            android:backgroundTint="@color/peach"/>

        <TextView
            android:id="@+id/medsRegisterDetailsFragmentMedActiveSubstanceName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedRecommendedDailyDoseValue"
            style="@style/substanceValueLabel"
            android:textColor="@color/black"
            android:backgroundTint="@color/dark_gray"
            android:singleLine="false"/>

        <View
            android:id="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/medsRegisterDetailsFragmentMedActiveSubstanceName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="20dp"
            style="@style/divider"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/medsRegisterDetailsFragmentMedDescr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>